--- a/2. Operadores.ipynb
+++ b/2. Operadores.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMaxPSgUBJOtm4O38s+w+9U",
+      "authorship_tag": "ABX9TyNbYaBF8xVX72DC0ewo3LLA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "id": "vp8GTBXf_Upt"
       },
       "source": [
-        "## 1.1 Operadores aritméticos\n",
+        "# 1.1 Operadores aritméticos\n",
         "<br>\n",
         "Para hacer operaciones matématicas básicas en variables, valores númericos y algunos con texto (cadenas de caracteres => string)"
       ]
@@ -61,8 +61,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vO8y4SNZ_ptS",
-        "cellView": "form"
+        "id": "vO8y4SNZ_ptS"
       },
       "source": [
         "#@title Tabla operadores aritméticos { run: \"auto\", vertical-output: true }\n",
@@ -86,7 +85,7 @@
         "id": "GLTXzY9zw09d"
       },
       "source": [
-        "### Adición"
+        "## Adición"
       ]
     },
     {
@@ -134,7 +133,7 @@
         "id": "5ob6KHeHxAl_"
       },
       "source": [
-        "### Sustracción"
+        "## Sustracción"
       ]
     },
     {
@@ -155,7 +154,7 @@
         "id": "jg5HE0EFw4ec"
       },
       "source": [
-        "### Multiplicación"
+        "## Multiplicación"
       ]
     },
     {
@@ -188,7 +187,7 @@
         "id": "NfMWM_t4xEZY"
       },
       "source": [
-        " ### División"
+        " ## División"
       ]
     },
     {
@@ -211,7 +210,7 @@
         "id": "uAX-4f9kx80h"
       },
       "source": [
-        "### Módulo\n",
+        "## Módulo\n",
         "Nos permite obtene el **resto** ó **residuo** de una división entera. <br>\n",
         "\n",
         "Por ejemplo 7 **MOD** 5 devolverá 2, ya que al realizar la división entera de 7 entre 5 se obtiene 1 como cociente y 2 como residuo. <br>"
@@ -307,7 +306,7 @@
         "id": "FMBupBw-yBXU"
       },
       "source": [
-        "### Potenciación"
+        "## Potenciación"
       ]
     },
     {
@@ -358,7 +357,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Orden de evaluación\n",
+        "## Orden de evaluación\n",
         "\n",
         "Al igual que en matematicas, al evaluarse una operación, se debe considerar la prioridad de las operaciones. "
       ],
@@ -394,7 +393,7 @@
         "id": "RqxPBpUR5f-i"
       },
       "source": [
-        "## 1.2 Operadores de asignaciones"
+        "# 1.2 Operadores de asignaciones"
       ]
     },
     {
@@ -425,7 +424,7 @@
         "id": "0L4xRcRKFLPm"
       },
       "source": [
-        "### Operador = <br>\n",
+        "## Operador = <br>\n",
         "Asigna a la variable (izquierda) un valor (derecha).\n",
         "\n",
         "x = 1"
@@ -449,7 +448,7 @@
         "id": "ohOkVoQeFpmP"
       },
       "source": [
-        "### Operador +=\n",
+        "## Operador +=\n",
         "El operador += suma y asigna a la variable (izquierda) la adición de la variable con el el valor (derecha)."
       ]
     },
@@ -569,7 +568,7 @@
         "id": "StcKGif0Glhz"
       },
       "source": [
-        "### Operador   **-=**\n",
+        "## Operador   **-=**\n",
         "El operador -= resta y asigna a la variable (izquierda) el valor (derecha)."
       ]
     },
@@ -618,7 +617,7 @@
         "id": "LfEmQdt_HOzo"
       },
       "source": [
-        "### Operador ***=** <br>\n",
+        "## Operador ***=** <br>\n",
         "El operador *= multiplica y asigna a la variable (izquierda) el valor (derecha)."
       ]
     },
@@ -654,7 +653,7 @@
         "id": "Eql9zRKMHe1a"
       },
       "source": [
-        "### Operador /=\n",
+        "## Operador /=\n",
         "El operador /= divide y asigna a la variable (izquierda) el valor (derecha)."
       ]
     },
@@ -690,7 +689,7 @@
         "id": "S9W2CJigZXRg"
       },
       "source": [
-        "## 1.3 Operadores de comparación <br>\n",
+        "# 1.3 Operadores de comparación <br>\n",
         "* Son usados para comparar dos valores\n",
         "*   Al usar estos operadores obtendremos un boleano: True, False\n",
         "*   Si la comparación es *verdadera* regresa **True** y **False** si es falsa.\n"
@@ -722,7 +721,7 @@
         "id": "KBLFn9xba9t-"
       },
       "source": [
-        "### Operador **==**"
+        "## Operador **==**"
       ]
     },
     {
@@ -895,7 +894,7 @@
         "id": "d3p9mh4wbcu7"
       },
       "source": [
-        "### Operador **!=**"
+        "## Operador **!=**"
       ]
     },
     {
@@ -1000,7 +999,7 @@
         "id": "kYMUX7KjcQtS"
       },
       "source": [
-        "### Operador **>**"
+        "## Operador **>**"
       ]
     },
     {
@@ -1056,7 +1055,7 @@
         "id": "_-pTJNWMcuwd"
       },
       "source": [
-        "### Operador **>=**"
+        "## Operador **>=**"
       ]
     },
     {
@@ -1112,7 +1111,7 @@
         "id": "Jk2wPVB4c77r"
       },
       "source": [
-        "### Operador **<**"
+        "## Operador **<**"
       ]
     },
     {
@@ -1168,7 +1167,7 @@
         "id": "TUmuf7uydPfi"
       },
       "source": [
-        "### Operador **<=**"
+        "## Operador **<=**"
       ]
     },
     {
@@ -1231,7 +1230,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2.1 Aritméticos\n",
+        "## Aritméticos\n",
         "Realiza las siguiente operaciones aritméticas:\n",
         "\n",
         "**Ejemplo:** Múltiplica **11** con **13**, e imprime el resultado\n",
@@ -1330,13 +1329,13 @@
       "metadata": {
         "id": "QtHBNS4CjpQ2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 2.2 Comparación\n",
+        "## Comparación\n",
         "Realiza las siguientes operaciones de comparación <br>\n",
         "\n",
         "Ej. Asigna el valor 15 a la variable \"valor_moneda\"<br>\n",
@@ -1480,6 +1479,273 @@
       "metadata": {
         "id": "TgdRsS4He5oZ"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 1.4 Operadores Lógicos\n",
+        "\n",
+        "Nos ayudan a aevaluar múltiples condiciones. \n",
+        "\n",
+        "**Palabras clave:** `and`, `or` y `not`"
+      ],
+      "metadata": {
+        "id": "YpxEbeOSiqoa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Tabla operadores de lógicos { run: \"auto\", vertical-output: true }\n",
+        "import pandas as pd\n",
+        "from IPython.display import display, HTML\n",
+        "\n",
+        "def pretty_print(df):\n",
+        "    return display(HTML(df.to_html().replace(\"\\\\n\",\"<br>\") ) )\n",
+        "\n",
+        "df = pd.DataFrame(columns=['Operador', 'Descripcción', 'Ejemplo'],\n",
+        "             index=[1, 2, 3],\n",
+        "             data=[['and', 'True si ambas evaluaciones son True', 'True and True == a True \\\\n True and False == False'],\n",
+        "                   ['or', 'True si alguna evaluación es True', 'True or True == False \\n True or False == True'], \n",
+        "                   ['not', 'False si alguna evaluación es False', 'True or False == False, \\n False or False']])\n",
+        "\n",
+        "pretty_print(df)"
+      ],
+      "metadata": {
+        "id": "0nxN0rjFiqVJ",
+        "outputId": "d3c9fd85-a3da-4a3b-aaca-87511f545252",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 406
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Operador</th>\n",
+              "      <th>Descripcción</th>\n",
+              "      <th>Ejemplo</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>and</td>\n",
+              "      <td>True si ambas evaluaciones son True</td>\n",
+              "      <td>True and True == a True <br> True and False == False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>or</td>\n",
+              "      <td>True si alguna evaluación es True</td>\n",
+              "      <td>True or True == False <br> True or False == True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>not</td>\n",
+              "      <td>False si alguna evaluación es False</td>\n",
+              "      <td>True or False == False, <br> False or False</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## and\n"
+      ],
+      "metadata": {
+        "id": "FqRkMOLBmHM4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "True and True"
+      ],
+      "metadata": {
+        "id": "CesGuxVRmGos",
+        "outputId": "aac47f12-3d93-47ad-d3a4-c37f1cd7f8c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "True and False"
+      ],
+      "metadata": {
+        "id": "DmVG-1simLQM",
+        "outputId": "7e48ed6c-7cb4-4d6b-fab2-276a82514e96",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## or"
+      ],
+      "metadata": {
+        "id": "KMkkWJSCmPMQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "True or False"
+      ],
+      "metadata": {
+        "id": "MwxN2OPZmGIs",
+        "outputId": "d6850d9b-087e-4f5f-ca06-54f5f18b4c5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "False or False"
+      ],
+      "metadata": {
+        "id": "1np2YGvVmU6c",
+        "outputId": "893bcea4-3807-4899-bc96-8c7fedacdc66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## not"
+      ],
+      "metadata": {
+        "id": "YsC5RSJ9mX6k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "not True"
+      ],
+      "metadata": {
+        "id": "V4tpUdU8me-h",
+        "outputId": "13665f9a-58e3-46aa-b453-45deb8c1598f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "not False"
+      ],
+      "metadata": {
+        "id": "GTehpubommba",
+        "outputId": "fc96bccf-5d14-45b8-aa86-14905ba2457e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
