--- a/2. Operadores.ipynb
+++ b/2. Operadores.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNbYaBF8xVX72DC0ewo3LLA",
+      "authorship_tag": "ABX9TyM98JpiQgAJE5O1YPEhZ1Ni",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1503,7 +1503,7 @@
         "def pretty_print(df):\n",
         "    return display(HTML(df.to_html().replace(\"\\\\n\",\"<br>\") ) )\n",
         "\n",
-        "df = pd.DataFrame(columns=['Operador', 'Descripcción', 'Ejemplo'],\n",
+        "df = pd.DataFrame(columns=['Operador', 'Descripción', 'Ejemplo'],\n",
         "             index=[1, 2, 3],\n",
         "             data=[['and', 'True si ambas evaluaciones son True', 'True and True == a True \\\\n True and False == False'],\n",
         "                   ['or', 'True si alguna evaluación es True', 'True or True == False \\n True or False == True'], \n",
@@ -1512,57 +1512,10 @@
         "pretty_print(df)"
       ],
       "metadata": {
-        "id": "0nxN0rjFiqVJ",
-        "outputId": "d3c9fd85-a3da-4a3b-aaca-87511f545252",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 406
-        }
+        "id": "0nxN0rjFiqVJ"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Operador</th>\n",
-              "      <th>Descripcción</th>\n",
-              "      <th>Ejemplo</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>and</td>\n",
-              "      <td>True si ambas evaluaciones son True</td>\n",
-              "      <td>True and True == a True <br> True and False == False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>or</td>\n",
-              "      <td>True si alguna evaluación es True</td>\n",
-              "      <td>True or True == False <br> True or False == True</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>not</td>\n",
-              "      <td>False si alguna evaluación es False</td>\n",
-              "      <td>True or False == False, <br> False or False</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1579,25 +1532,34 @@
         "True and True"
       ],
       "metadata": {
-        "id": "CesGuxVRmGos",
-        "outputId": "aac47f12-3d93-47ad-d3a4-c37f1cd7f8c9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "CesGuxVRmGos"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1\n",
+        "b = 2\n",
+        "c = 3"
+      ],
+      "metadata": {
+        "id": "IFCPW3bHAWpb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a < c and b < c"
+      ],
+      "metadata": {
+        "id": "EOkcphI1Abzp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1605,25 +1567,21 @@
         "True and False"
       ],
       "metadata": {
-        "id": "DmVG-1simLQM",
-        "outputId": "7e48ed6c-7cb4-4d6b-fab2-276a82514e96",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "DmVG-1simLQM"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a < c and b > c"
+      ],
+      "metadata": {
+        "id": "jcT-j_2AAhNM"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1640,25 +1598,34 @@
         "True or False"
       ],
       "metadata": {
-        "id": "MwxN2OPZmGIs",
-        "outputId": "d6850d9b-087e-4f5f-ca06-54f5f18b4c5f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "MwxN2OPZmGIs"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1\n",
+        "b = 2\n",
+        "c = 3"
+      ],
+      "metadata": {
+        "id": "gQOnxuS6Al8e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a < c or b < c"
+      ],
+      "metadata": {
+        "id": "AWBREts0Amg9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1666,25 +1633,21 @@
         "False or False"
       ],
       "metadata": {
-        "id": "1np2YGvVmU6c",
-        "outputId": "893bcea4-3807-4899-bc96-8c7fedacdc66",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "1np2YGvVmU6c"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a > c or b > c"
+      ],
+      "metadata": {
+        "id": "5fJ0s9y7ApPr"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1701,25 +1664,45 @@
         "not True"
       ],
       "metadata": {
-        "id": "V4tpUdU8me-h",
-        "outputId": "13665f9a-58e3-46aa-b453-45deb8c1598f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "V4tpUdU8me-h"
       },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1\n",
+        "b = 2\n",
+        "c = 3"
+      ],
+      "metadata": {
+        "id": "dY3vK7vNA2tR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a < c"
+      ],
+      "metadata": {
+        "id": "GO5fhWQSA3fI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "not a < c"
+      ],
+      "metadata": {
+        "id": "PA4FlHd3AtQ8"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1727,25 +1710,32 @@
         "not False"
       ],
       "metadata": {
-        "id": "GTehpubommba",
-        "outputId": "fc96bccf-5d14-45b8-aa86-14905ba2457e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "GTehpubommba"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a > c"
+      ],
+      "metadata": {
+        "id": "oiYJpsNLBA7L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "not a > c"
+      ],
+      "metadata": {
+        "id": "UKwGH8UABH8K"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
