--- a/4. Tipos_de_datos_complejos.ipynb
+++ b/4. Tipos_de_datos_complejos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOpDyY+3U16hmOJr0322Rye",
+      "authorship_tag": "ABX9TyP7+poy38tFCWqCmUVyWJwy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1005,15 +1005,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Ejercicio"
-      ],
-      "metadata": {
-        "id": "CmFHJSc1nL_K"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Diccionarios"
       ],
       "metadata": {
@@ -1040,103 +1031,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "million_list = [item for item in range(100_000_000)]\n",
-        "kb = sys.getsizeof(million_list)\n",
-        "mb = kb / 1_000_000\n",
-        "print(f'{mb:,}')"
-      ],
-      "metadata": {
-        "id": "Zq7EwYnMDTLn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sys.getsizeof(range(100_000_000))"
-      ],
-      "metadata": {
-        "id": "0mnmN7BxESej"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# testing timeit()\n",
-        "import timeit\n",
-        "print(timeit.timeit('output = 10*5'))"
-      ],
-      "metadata": {
-        "id": "H85LWpRfFYYj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(timeit.repeat('5 in range(100_000_000)', repeat=5))"
-      ],
-      "metadata": {
-        "id": "vGmJN65pFaQH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%timeit\n",
-        "5 in range(100_000_000)"
-      ],
-      "metadata": {
-        "id": "CpmFLP54EwH4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%timeit\n",
-        "5 < 100_000_000"
-      ],
-      "metadata": {
-        "id": "tiRwek_bE0qU"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Str"
-      ],
-      "metadata": {
-        "id": "yy4Xcht4CZbe"
-      }
-    },
-    {
-      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "L_t45bnGAmUl"
+        "id": "2ajhuthO-aav"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Tipos de datos avanzados"
-      ],
-      "metadata": {
-        "id": "Jsb8zN5cAoOy"
-      }
     },
     {
       "cell_type": "code",
@@ -1162,13 +1062,90 @@
         "Los operadores de pertenencia se utilizan para comprobar si un valor o variable se encuentran en una secuencia (list, tuple, dict, set o str).\n",
         "\n",
         "\n",
-        "in Devuelve True si el valor se encuentra en una secuencia; False en caso contrario.\n",
+        "in Devuelve True si el valor se encuentra en una secuencia; False en caso contrario.<br>\n",
         "not int\n",
         "\n",
         "Devuelve True si el valor se encuentra en una secuencia; False en caso contrario."
       ],
       "metadata": {
         "id": "VV0Wy-8Ih9ji"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Tabla operadores de lógicos { run: \"auto\", vertical-output: true }\n",
+        "import pandas as pd\n",
+        "from IPython.display import display, HTML\n",
+        "\n",
+        "def pretty_print(df):\n",
+        "    return display(HTML(df.to_html().replace(\"\\\\n\",\"<br>\") ) )\n",
+        "\n",
+        "df = pd.DataFrame(columns=['Operador', 'Descripción', 'Ejemplo'],\n",
+        "             index=[1, 2],\n",
+        "             data=[['in', 'True SI el item esta contenido en la secuencia \\n False si NO esta contenido', '\"a\" in \"planeta\" == True \\n \"a\" in \"universo\" == False'],\n",
+        "                   ['not in', 'True si el item NO se encuentra en la secuencia \\n True SI esta contenido', '\"a\" in \"planeta\" == False \\n \"a\" in \"universo\" == True']])\n",
+        "                   \n",
+        "\n",
+        "pretty_print(df)"
+      ],
+      "metadata": {
+        "id": "CK5Q5klO_9aF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"a\" in \"planeta\""
+      ],
+      "metadata": {
+        "id": "CssSCItKCs3y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"a\" in \"universo\""
+      ],
+      "metadata": {
+        "id": "Rct6ATgiCv8g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"a\" not in \"planeta\""
+      ],
+      "metadata": {
+        "id": "N7eNf_NLCy49"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"a\" not in \"universo\""
+      ],
+      "metadata": {
+        "id": "r4gg748KC2zr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tipos de datos avanzados"
+      ],
+      "metadata": {
+        "id": "Jsb8zN5cAoOy"
       }
     },
     {
