--- a/Ejercicios_listas.ipynb
+++ b/Ejercicios_listas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCKIm2NXJkGStdTdKfcG5c",
+      "authorship_tag": "ABX9TyNRxL6fN+4R0SjIU0g/JJVW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,8 @@
       "source": [
         "1. Redes sociales\n",
         "> a) Crea una lista con el nombre de 5 redes sociales.<br> \n",
-        "b) Ordena la lista"
+        "b) Ordena la lista\n",
+        "c) Imprime la lista"
       ],
       "metadata": {
         "id": "fbz409a_tWyY"
@@ -61,7 +62,8 @@
         "2. Dioses griegos <br>\n",
         "a) Crea una lista con los siguientes dioses griegos: Zeus, Poseidón, Hades, Hermes, Hera, Atenea, Artemisa <br>\n",
         "b) Ordena la lista <br>\n",
-        "c) ¿Cuántos dioses hay en la lista? <br>\n"
+        "c) ¿Cuántos dioses hay en la lista? <br>\n",
+        "d) Imprime el valor Atenea\n"
       ],
       "metadata": {
         "id": "smSUQ_vu75RJ"
@@ -101,7 +103,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "8. Calificaciones\n",
+        "3. Calificaciones\n",
         "> a) Crear una lista de números flotantes: 9.0, 2.0, 5.0, 9.0, 10.0, 8.5<br>\n",
         "b) Obtén el promedio redondeado a dos dígitos"
       ],
