--- a/Ejercicios/Ejercicio_integrador_II_Algoritmos.ipynb
+++ b/Ejercicios/Ejercicio_integrador_II_Algoritmos.ipynb
@@ -8,7 +8,7 @@
         "_kP__ZxgeLOY"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO+cH9qkbvfaZCnlPt66EQU",
+      "authorship_tag": "ABX9TyNsq3z2vXRZ5lUViNXapwRW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,124 +141,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NhBsRWI10uZC"
-      },
-      "source": [
-        "def area_circulo(radio):\n",
-        "  \"\"\"Regrea el área de un circulo redondeado a dos decimales\"\"\"\n",
-        "\n",
-        "  area = round((radio * radio) * 3.1415, 2)\n",
-        "  print(\"El área del círculo con radio\", radio, \"es:\", area)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "area_circulo?"
-      ],
-      "metadata": {
-        "id": "XkkfwkzBiJSf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gEToS_Np05cX",
-        "outputId": "0d009705-e559-4a60-a27b-1ea98807c2da"
-      },
-      "source": [
-        "radio = float(input(\"Ingresa el radio:\"))\n",
-        "area_circulo(radio)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingresa el radio:5\n",
-            "El área del círculo con radio 5.0 es: 78.54\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w3XafMl31cYP",
-        "outputId": "fbb84bd9-ac22-4af7-998d-3d4c3742cf9f"
-      },
-      "source": [
-        "# Testing\n",
-        "# radio = 7, area = 153.94\n",
-        "radius = 23\n",
-        "area_circulo(radius)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The area of a circle with radius 23 is: 1661.8535000000002\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VNbR7qpX0Mn2",
-        "outputId": "4ed3a6b3-8b01-4135-abd5-f1dad4d7f076"
-      },
-      "source": [
-        "while True:\n",
-        "  radio = float(input(\"Ingresa el radio:\"))\n",
-        "\n",
-        "  if radio == -1:\n",
-        "    break\n",
-        "\n",
-        "  else:\n",
-        "    area_circulo(radio)\n",
-        "\n",
-        "print('Programa terminado')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingresa el radio:2\n",
-            "El área del círculo con radio 2.0 es: 12.566\n",
-            "Ingresa el radio:3\n",
-            "El área del círculo con radio 3.0 es: 28.273500000000002\n",
-            "Ingresa el radio:4\n",
-            "El área del círculo con radio 4.0 es: 50.264\n",
-            "Ingresa el radio:0\n",
-            "El área del círculo con radio 0.0 es: 0.0\n",
-            "Ingresa el radio:-1\n",
-            "Programa terminado\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# Ejercicios:"
@@ -330,57 +212,18 @@
       },
       "source": [
         "# II. Números pares Fibonacci <br>\n",
-        "Cada nuevo término de la secuencia de Fibonacci se genera sumando los dos términos anteriores. Al comenzar con 1 y 2, los primeros 10 términos serán:\n",
+        "Cada nuevo número de la secuencia de Fibonacci se genera sumando los dos números anteriores. Al comenzar con 0 y 1:\n",
         "\n",
-        "1, 2, 3, 5, 8, 13, 21, 34, 55, 89, ...\n",
+        "0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, ...\n",
         "\n",
-        "Al considerar los términos en la secuencia de Fibonacci cuyos valores no exceden los cuatro millones, encuentre la suma de los términos pares.\n",
+        "Al considerar los números en la secuencia de Fibonacci cuyo valor no sea mayor o igual a cuatro millones, encuentre la suma de los términos pares.\n",
         "\n",
         "\n",
         "**»»** Pasos <br>\n",
-        "1. Crear secuencia Fibonacci para los primeros 10 términos\n",
+        "1. Crear secuencia Fibonacci\n",
         "2. Identificar números pares\n",
         "3. Si es número par sumar\n",
         "4. Si mi número Fibonacci es mayor o igual a cuatro millones dejar de ejecutar proceso"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1muhfLIBXFWh"
-      },
-      "source": [
-        "#### Paso 1. Generador de números Fibonacci <br>\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QxLjIqgobwTN"
-      },
-      "source": [
-        "Genera un algoritmo para obtener el número de téminos Fibonacci, solicitado <br>\n",
-        "- Los primeros 3 términos son: <br>\n",
-        "```\n",
-        ">>> print(fibonacci_numbers(5))\n",
-        "0, 1, 1, 2, 3\n",
-        "```\n",
-        "- Los primeros 6 términos son: <br>\n",
-        "```\n",
-        ">>> print(fibonacci_numbers(8))\n",
-        "0, 1, 1, 2, 3, 5, 8, 13\n",
-        "```\n",
-        "- Los primeros 10 términos son: <br>\n",
-        "```\n",
-        ">>> print(fibonacci_numbers(12))\n",
-        "0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89\n",
-        "```\n",
-        "\n",
-        "\n",
-        "\n",
-        "**»» Retos para generador de números Fibonacci**: \n",
-        "<br>\n",
-        "1. Genera el código en menos de 10 líneas de código (dificultad **media**) **ó** en menos de 5 líneas de código (**avanzado**)."
       ]
     },
     {
@@ -390,7 +233,7 @@
       },
       "source": [
         "**Tips**\n",
-        "- Usa ciclo for\n",
+        "- Usa bucles\n",
         "- Usar 3 variables: suma, temporal, fibonacci\n",
         "- Recuerda las asignaciones múltiples"
       ]
@@ -423,10 +266,7 @@
       },
       "source": [
         "#### Paso 4: Si el número fibonacci es mayor a 4, 000, 000 finalizar ejecución\n",
-        "<br>\n",
-        "\n",
-        "**Tip**\n",
-        "- Usa ciclo while\n"
+        "<br>\n"
       ]
     },
     {
