--- a/4. Tipos de datos complejos.ipynb
+++ b/4. Tipos de datos complejos.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/4.%20Tipos_de_datos_complejos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/4.%20Tipos%20de%20datos%20complejos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
