--- a/Ejercicio/Ejercicio: Listas.ipynb
+++ b/Ejercicio/Ejercicio: Listas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRxL6fN+4R0SjIU0g/JJVW",
+      "authorship_tag": "ABX9TyPy4jzFlEksELNne5Ju/VTw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/Ejercicio/Ejercicio:%20Listas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/Ejercicio/Ejercicio%3A%20Listas.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -81,8 +81,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Planetas\n",
-        "a) Convierte el siguiente string `\"Marte|Venus|Tierra|Júpiter|Saturno\"`en una lista. Usa el método split <br>\n",
+        "3. Planetas <br>\n",
+        "a) Convierte el siguiente string `\"Marte|Venus|Tierra|Júpiter|Saturno\"` en una lista. Usa el método split <br>\n",
         "b) Ordena la lista <br>\n",
         "c) Crea un algoritmo para revisar si un planeta dado es gaseoso o rocos. <br>\n",
         ">Los planetas **rocosos** son: Mercurio, Venus, La Tierra y Marte. Los planetas **gaseosos** son: Júpiter, Saturno, Urano y Neptuno "
@@ -103,8 +103,38 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Calificaciones\n",
-        "> a) Crear una lista de números flotantes: 9.0, 2.0, 5.0, 9.0, 10.0, 8.5<br>\n",
+        "4. Conjunto de números <br>\n",
+        "a) Usa la lista `numeros_list` la cual contiene diferentes números<br>\n",
+        "b) Imprime el máximo valor<br>\n",
+        "c) Imprime el penúltimo valor <br>\n",
+        "d) Obtén el número de veces que se repite el valor 10. Usa el método count."
+      ],
+      "metadata": {
+        "id": "TrZK_tGWfUoB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros_list = [\n",
+        "    61, 95, 26, 93, 73, 74, 46, 16, 7, 12, 27, 89, 94, 46, 37, 6, 24, 7, 72,\n",
+        "    25, 98, 81, 10, 16, 79, 73, 91, 74, 93, 47, 72, 50, 10, 76, 56, 7, 9, 29,\n",
+        "    2, 64, 59, 99, 52, 70, 17, 62, 50, 32, 17, 22, 34, 6, 74, 43, 80, 87, 97,\n",
+        "    60, 95, 76, 70, 65, 74, 50, 1, 40, 45, 78, 0, 53, 75, 70, 42, 26, 79, 92,\n",
+        "    50, 32, 32, 32, 95, 27, 82, 27, 31, 11, 44, 10, 24, 80, 94, 48, 70, 20, 79,\n",
+        "    33, 47, 19, 50, 60]"
+      ],
+      "metadata": {
+        "id": "vPUvzrgwgcNr"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Calificaciones\n",
+        "> a) Crear una lista de números flotantes: 1.67, 1.67, 1.62, 0.5, 1.45, 6.05, 7.64, 7.23, 4.44, 7.63, 4.54, 5.55, 6.87, 4.3, 4.23, 8.34, 8.88, 9.95, 9.86, 8.56<br>\n",
         "b) Obtén el promedio redondeado a dos dígitos"
       ],
       "metadata": {
@@ -115,7 +145,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gpMyuBYE72GC"
+        "id": "Lwv7xYf4g_j-"
       },
       "execution_count": null,
       "outputs": []
