--- a/Ejercicios/Ejercicio: Condicionales.ipynb
+++ b/Ejercicios/Ejercicio: Condicionales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5/QUpEeqx8jKappFeTL0p",
+      "authorship_tag": "ABX9TyMP1wtS3OtCXiKGLxtwJ50p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/Ejercicios/Ejercicio:%20Condicionales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cuauhtemocbe/Python-Basics/blob/main/Ejercicios/Ejercicio%3A%20Condicionales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "d884EGfGtR3z",
         "colab": {
@@ -236,7 +236,7 @@
       "cell_type": "markdown",
       "source": [
         "2. Clasificación de climas <br>\n",
-        "Los climas se pueden clasificar de acuerdo a la preciptación anual y la temperatura media. \n",
+        "Los climas se pueden clasificar de acuerdo a la precipitación anual y la temperatura media. \n",
         "\n",
         "Genera un programa que ayude a automatizar la clasficacion del clima de acuerdo a:\n",
         "\n",
@@ -250,6 +250,33 @@
       "metadata": {
         "id": "xcUFRx87IL4A"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xFIrhwDdqRW9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NcWGqp-hqR9n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lRygXlb4qSrO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
