--- a/4. Tipos de datos complejos.ipynb
+++ b/4. Tipos de datos complejos.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP7+poy38tFCWqCmUVyWJwy",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNPKeQZ5ukbu8qq1Tb2ehtN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -420,6 +421,105 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "o2Hij-gKnNeL"
+      },
+      "source": [
+        "### Método **sort**\n",
+        "Este método ordena los elementos de una lista y regresa un valor None"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xGd65CUxnD50"
+      },
+      "source": [
+        "frutas_list = [\"sandia\", \"mango\", \"durazno\", \"mamey\", \"melón\"]\n",
+        "print(frutas_list.sort())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(frutas_list.sort())"
+      ],
+      "metadata": {
+        "id": "0CzWZdBzs5GH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UHVFHRN3nUZu"
+      },
+      "source": [
+        "print(frutas_list)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BIgWsYGVnW6f"
+      },
+      "source": [
+        "numeros_list = [2, 3, 4, 1, 10]\n",
+        "numeros_list.sort()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros_list"
+      ],
+      "metadata": {
+        "id": "wnIWtPMTtCa5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Función **sorted**\n",
+        "Ordena los elementos de un iterable"
+      ],
+      "metadata": {
+        "id": "9PJXxglPsN3P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeros_list = [2, 3, 4, 1, 10]"
+      ],
+      "metadata": {
+        "id": "xwhgUxTls0_N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sorted(numeros_list)"
+      ],
+      "metadata": {
+        "id": "VOAXbQ9StFxt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "## Métodos"
       ],
@@ -780,111 +880,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "o2Hij-gKnNeL"
-      },
-      "source": [
-        "### sort\n",
-        "Este método ordena los elementos de una lista y regresa un valor None"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xGd65CUxnD50"
-      },
-      "source": [
-        "frutas_list = [\"sandia\", \"mango\", \"durazno\", \"mamey\", \"melón\"]\n",
-        "print(frutas_list.sort())"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "type(frutas_list.sort())"
-      ],
-      "metadata": {
-        "id": "0CzWZdBzs5GH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UHVFHRN3nUZu"
-      },
-      "source": [
-        "print(frutas_list)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BIgWsYGVnW6f"
-      },
-      "source": [
-        "numeros_list = [2, 3, 4, 1, 10]\n",
-        "numeros_list.sort()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "numeros_list"
-      ],
-      "metadata": {
-        "id": "wnIWtPMTtCa5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "## Funciones"
       ],
       "metadata": {
         "id": "_dImwniSsny9"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### sorted\n",
-        "Ordena los elementos de un iterable"
-      ],
-      "metadata": {
-        "id": "9PJXxglPsN3P"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "numeros_list = [2, 3, 4, 1, 10]"
-      ],
-      "metadata": {
-        "id": "xwhgUxTls0_N"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sorted(numeros_list)"
-      ],
-      "metadata": {
-        "id": "VOAXbQ9StFxt"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
